# apg

./: .gitignore
civic-prm/: README.md  pyproject.toml
civic-prm/docs/: processbench_benchmark.md
civic-prm/history/: benchmark_acceptance.md  benchmark_v3_note.md  blind_audit_handoff.md  final_summary.md  insights.md  main_table.md  paper_draft.md  paper_outline.md  progress.md  results.md  submission_checklist.md
civic-prm/paper/: README.md  main.tex  references.bib
civic-prm/scripts/: analyze_benchmark_v3_acceptance.py  analyze_benchmark_v3_reproduction.py  analyze_processbench_main_table.py  build_benchmark_v3.py  build_blind_audit_packet.py  build_craft_core.py  build_llm_benchmark_v2.py  build_model_generated_counterfactual_slice.py  build_model_generated_slice.py  build_naturalized_slice.py  build_processbench_answer_swap_pilot.py  build_processbench_benchmark.py  build_processbench_prefix_benchmark.py  build_processbench_repair_pilot.py  build_processbench_suite.py  export_benchmark_v3_from_acceptance.py  import_external_dataset.py  merge_generated_eval_slices.py  run_api_judge_pilot.py  run_artifact_audit.py  run_benchmark_v3_robustness.py  run_dual_head_transfer.py  run_generated_answer_swap_transfer.py  run_generated_api_judge.py  run_generated_local_judge.py  run_mechanism_analysis.py  run_natural_transfer.py  run_processbench_answer_swap_api_judge.py  run_processbench_api_judge.py  run_processbench_frozen_baselines.py  run_processbench_repair_api_judge.py  (+9 more)
toolshift/: 04_toolshift_schema_robust_tool_agents.md  README.md  pyproject.toml
(+789 files in other folders)
