[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-prm"
version = "0.1.0"
description = "Week 1 research scaffold for CIVIC-PRM."
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.0",
  "numpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
